--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     <nav class="main-nav overlay clearfix">
         
         <div class="subscribe-button">
-            <a class=" spotify" href="https://open.spotify.com/show/1ivWtpBclvIERmIhDCa9z3"><img src="/assets/images/spotify.svg" /></a>
-            <a class="subscribe-button spotify" href="https://pcr.apple.com/id1515212955"><img src="/assets/images/apple.svg" /></a>
+            <a class="subscribe-button spotify" href="https://podcasts.apple.com/us/podcast/prompt-drum-and-bass/id1515212955"><img src="/assets/images/apple.svg" /></a>
         </div>
     </nav>
     <div class="vertical">
